# python-hcl2-tf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: default.yaml
src/hcl2tf/: __init__.py  compact.py  utils.py
src/hcl2tf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/samples/check/: compacted.json  config.tf
tests/samples/complete/: compacted.json  config.tf  expected.md
tests/samples/complete/modules/shout/: main.tf
tests/samples/data/: compacted.json  config.tf
tests/samples/import/: compacted.json  config.tf
tests/samples/locals/: compacted.json  config.tf
tests/samples/module/: compacted.json  config.tf
tests/samples/moved/: compacted.json  config.tf
tests/samples/output/: compacted.json  config.tf
tests/samples/provider/: compacted.json  config.tf
tests/samples/resource/: compacted.json  config.tf
tests/samples/terraform/: compacted.json  config.tf
tests/samples/variable/: compacted.json  config.tf
tests/unit/: conftest.py  fixtures.py  test_addressable_dict.py  test_hcl_compactor_funcs.py  test_interface.py
