[metadata]
name = hcl2tf
version = attr: hcl2tf.__version__
author = Nils Diefenbach
author_email = foss@deepbrook.io
description = Convenience Utility for easier access to parsed terraform configuration
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
url = https://github.com/deepbrook/python-hcl2-terraform
keywords = kubernetes
license = MIT
classifiers =
    'Intended Audience :: Developers'
    'Operating System :: Unix'
    'Operating System :: POSIX'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3.9'
    'Programming Language :: Python :: Implementation :: CPython'
    'Topic :: Terraform'
    'Topic :: IaC'

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.8
install_requires =
    python-hcl2
tests_requires = 
    tox
    pytest
    pytest-cov;

[options.package_data]
* = *.txt, *.rst

[options.packages.find]
where=src

[tox:tox]
min_version = 4.0
env_list =
    py310


pass_env = []
set_env = {}

[testenv]
deps = 
    pytest
    pytest-cov
    pyyaml
commands = pytest --cov=hcl2tf {posargs} tests
